# based_ms_using_pub_sub

./: .gitignore  Dockerfile  README.md  clients.py  config.py  main.py  pubsub_operations.py  pyproject.toml  queries.py  requirements.txt
operations/: bigquery_operations.py  gcs_operations.py  pubsub_operations.py
