[tool.poetry]
name = "base-ms"
version = "1.0.0"
description = "Base project which use pub sub and bigquery"
authors = ["y"]
license = "n/a"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
google-cloud-pubsub = "^2.26.1"
google-cloud-storage = "^2.18.2"
google-cloud-bigquery = "^3.26.0"
google-cloud-logging = "^3.11.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
